--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".RegisterActivity">
 
     <ScrollView
@@ -20,28 +21,27 @@
 
             <TextView
                 android:id="@+id/textView1"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="105dp"
+                android:layout_marginStart="115dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="105dp"
                 android:text="Выберите аватар"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_marginStart="105dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="105dp"
                 app:srcCompat="@drawable/profile"
+                android:layout_marginLeft="100dp"
                 tools:ignore="SpeakableTextPresentCheck" />
 
             <com.rey.material.widget.CheckBox
-                android:id="@+id/login_checkbox"
+                android:id="@+id/Big_form_checkbox"
                 style="@style/Material.Drawable.CheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,13 +55,22 @@
                 android:textSize="16sp"
                 android:textStyle="bold"></com.rey.material.widget.CheckBox>
 
+            <Spinner
+                android:id="@+id/planets_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:contentDescription="@string/planets_array"
+                android:minHeight="48dp"/>
+
             <EditText
                 android:id="@+id/fullName_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:background="@drawable/button"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
                 android:padding="15dp"
@@ -72,22 +81,15 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:id="@+id/linear_block"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/button"
-                android:orientation="vertical">
-
                 <EditText
                     android:id="@+id/login_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
                     android:padding="15dp"
                     android:hint="Логин:"
                     android:textColor="@android:color/black"
@@ -100,6 +102,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:importantForAutofill="no"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
                     android:inputType="phone"
                     android:padding="15dp"
                     android:hint="Номер телефона:"
@@ -114,13 +119,15 @@
                     android:layout_height="wrap_content"
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:padding="15dp"
                     android:hint="Почта:"
                     android:textColor="@android:color/black"
                     android:textColorHint="@android:color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
-            </LinearLayout>
 
             <EditText
                 android:id="@+id/password_user"
@@ -128,12 +135,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:background="@drawable/button"
                 android:importantForAutofill="no"
                 android:layout_marginTop="20dp"
                 android:inputType="numberPassword"
                 android:padding="15dp"
-                android:hint="Введите пароль:"
+                android:hint="пароль:"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
                 android:textSize="20sp"
@@ -145,7 +151,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:background="@drawable/button"
                 android:layout_marginTop="20dp"
                 android:importantForAutofill="no"
                 android:inputType="numberPassword"
@@ -155,39 +160,87 @@
                 android:textColorHint="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp">
 
-            <RadioButton
-                android:id="@+id/user_gender_btn"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:textColorHint="@android:color/black"
+                    android:textSize="16sp"
+                    android:textAlignment="center"
+                    android:text="Мужской" />
+
+                <Switch
+                    android:id="@+id/switch1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:minHeight="48dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@android:color/black"
+                    android:text="Пол" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textAlignment="center"
+                    android:textColorHint="@android:color/black"
+                    android:text="Женский" />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/ras_user"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
-                android:minHeight="48dp"
-                android:hint="Мужской"
-                android:textColor="@color/black"
+                android:importantForAutofill="no"
+                android:inputType="textPersonName"
+                android:padding="15dp"
+                android:hint="Расскажите о себе:"
+                android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                android:textSize="16sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-            <RadioButton
-                android:id="@+id/user_gender_btn2"
+            <com.rey.material.widget.CheckBox
+                android:id="@+id/userDog_checkbox"
+                style="@style/Material.Drawable.CheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
                 android:minHeight="48dp"
-                android:hint="Женский"
+                android:text="Я принимаю условия пользовательского соглашения и даю согласие компании ItVakSa на обработку моей персональной информации на условиях, определенных политикой конфеденциальности."
+                android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textColorHint="@android:color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold|italic"></com.rey.material.widget.CheckBox>
 
             <Button
                 android:id="@+id/reg_btn"
                 android:layout_width="198dp"
                 android:layout_height="72dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="100dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/button"
                 android:padding="20dp"
                 android:text="Регистрация"
